# Tiny

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Examples.md  INSTRUCTIONS.md  README.md  REFERENCES.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-13-tiny-phase-0.md
docs/superpowers/specs/: 2026-05-13-tiny-revival-design.md
eg_files/: sequence.gb  tfsq.fasta
notebooks/: 01_orf_translation.qmd
tests/: test_consensus_score.py  test_errors.py  test_external_validation.py  test_formats_lazy.py  test_orf.py  test_orf_cli.py  test_resource_limits.py  test_rna_sequence.py  test_trunk_stability.py  test_version.py
tiny/: __init__.py  cli.py
tiny/algorithms/: orf.py  orf_explain.py
tiny/core/: advanced.py  analysis.py  errors.py  formats.py  sequence.py  utils.py
