[tool.poetry]
name = "tiny"
version = "0.2.0"
description = "A focused bioinformatics CLI: classical DNA algorithms with deep explanations."
authors = ["Bjorn99 <67769176+Bjorn99@users.noreply.github.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "tiny"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
typer = "^0.15.0"
rich = "^13.9.4"
biopython = "^1.85"
pysam = {version = "^0.24.0", optional = true}

[tool.poetry.extras]
sam = ["pysam"]

[tool.poetry.group.notebooks]
optional = true

[tool.poetry.group.notebooks.dependencies]
jupyter = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
ruff = "^0.7.0"
pre-commit = "^4.0.0"

[tool.poetry.scripts]
tiny = "tiny.cli:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # function call in default (idiomatic for typer.Argument/Option)
]

[tool.pytest.ini_options]
markers = [
    "quick: short-running tests safe to run pre-commit",
    "requires_sam: tests that require pysam (SAM/BAM)",
]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
